# DUM_project

./: .dockerignore  .env.example  .gitignore  Dockerfile  Dockerfile.vercel  Makefile  README.md  pyproject.toml  render.yaml
apps/api/: main.py
apps/web/: package-lock.json  package.json
data/local/: demo.sqlite  sentinel.sqlite  sentinel.sqlite-shm  sentinel.sqlite-wal
data/models/: sensitive_sequence_tagger.json  sensitive_span_nb.json
data/samples/: confidential.txt  dangerous.txt  normal.txt
docs/: architecture.md  demo-flow.md  deployment.md  enterprise-area-classifier.md  enterprise-memory.md  local-ml-detector.md  model-card-local-sequence-tagger.md  threat-model.md  vector-database.md  vercel-deployment.md
scripts/: run_privacy_demo.py  start_teo_demo.sh  train_local_ml_detector.py
sentinel/audit/: store.py
sentinel/config/: settings.py
sentinel/db/: __init__.py  schema.py
sentinel/domain/: meetings.py  privacy.py
sentinel/meetings/: service.py  store.py
sentinel/memory/: service.py  store.py  vectorizer.py
sentinel/privacy/: detectors.py  engine.py  hybrid_detector.py  local_ml.py  policy.py  sequence_tagger.py  vault.py
sentinel/providers/: base.py  cloud_gateway.py  elevenlabs_provider.py  openai_provider.py
sentinel/tasks/: enterprise_classifier.py  extractor.py
tests/: test_elevenlabs_provider.py  test_enterprise_classifier.py  test_local_ml_detector.py  test_memory_service.py  test_openai_provider.py  test_privacy_engine.py  test_security_checks.py  test_settings.py  test_vector_memory.py  test_web_serving.py
(+2 files in other folders)
